Responsive fix smaller device

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
+    <header class="container">
       <h1>TO DO LIST</h1>
     </header>
     <div class="main-container">
