--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
         </header>
         <div class="main-container">
             <div id="textclass">
-                <input class="textbox" type="text" placeholder="Enter Tasks..." />
+                <input class="textbox" maxlength="55" type="text" placeholder="Enter Tasks..." />
                 <button class="btn">Add</button>
             </div>
         </div>
         <div id="tasks">
-            <ul></ul>
+            <ul>
+            </ul>
         </div>
         <script src="./script.js"></script>
     </body>
 </html>
+
+
