Added Clear All Button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <input class="textbox" maxlength="55" type="text" placeholder="Enter Tasks..." />
                 <button class="btn">Add</button>
             </div>
+            <div id="clearall">
+                <button id="clearallbtn">Clear all</button>
+            </div>
         </div>
         <div id="tasks">
             <ul>
